<resources>
    <string name="app_name">Acorde - Registro de Relatórios</string>
    <string name="username">Nome de usuário</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="invalid_username">Usuário inválido</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="developer_name">ACORDE SÃO CARLOS</string>
    <string name="formularioNutricionista">Nutricionista</string>
    <string name="formularioEducadoraFisica">Educadora Física</string>
    <string name="formularioPsicologa">Psicóloga</string>
    <string name="educadoraEspecial">Educadora Especial</string>
    <string name="formularioPsicopedagoga">Psicopedagoga</string>
    <string name="semRelatorios">Não há relatórios cadastrados</string>
    <string name="nomeAssistido">NomeAssistido</string>
    <string name="mensagens">Mensagens</string>
    <string name="invalid_date">Data inválida</string>
    <string name="data">Data do atendimento</string>
    <string name="proximoListarRelatorio">Selecione o profissional para visualizar seus relatórios existentes</string>
    <string name="proximoNovoRelatorio">Criar relatório</string>
    <string name="infoNovoRelatorio">Selecione o profissional para criar um novo relatório</string>
    <string name="cadastrar">Criar relatório</string>
    <string name="buscar">Visualizar relatórios</string>
    <string name="dataAtendimento">Clique para alterar a Data do Atendimento</string>
    <string name="nomeDoAssistido">Nome do Assistido</string>
    <string name="motivoAtendimento">Motivo do Atendimento</string>
    <string name="encaminhamento">Encaminhamento</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="altura">Altura (cm)</string>
    <string name="peso">Peso (Kg)</string>
    <string name="bracos">Braços (cm)</string>
    <string name="quadril">Quadril (cm)</string>
    <string name="cintura">Cintura (cm)</string>
    <string name="idade">Idade</string>
    <string name="bracoDireito">Braço Direito (cm)</string>
    <string name="bracoEsquerdo">Braço Esquerdo (cm)</string>
    <string name="pernaDireita">Perna Direita (cm)</string>
    <string name="pernaEsquerda">Perna Esquerda (cm)</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="abaixo">Abaixo</string>
    <string name="ruim">Ruim</string>
    <string name="medio">Médio</string>
    <string name="regular">Regular</string>
    <string name="bom">Bom</string>
    <string name="rapida">Rápida</string>
    <string name="moderada">Moderada</string>
    <string name="devagar">Devagar</string>
    <string name="perguntaAlimentaSozinho">Alimenta-se sozinho?</string>
    <string name="perguntaDesempenhoGeral">Desempenho Geral:</string>
    <string name="perguntaDesempenhoEspecifico">Desempenho Específico:</string>
    <string name="perguntaAspectosMotrizes">Aspectos Motrizes:</string>
    <string name="perguntaAspectosCognitivos">Aspectos Cognitivos:</string>
    <string name="perguntaAspectosSociais">Aspectos Sociais</string>
    <string name="perguntaServeSozinho">Serve-se sozinho?</string>
    <string name="perguntaSabeQtdAlimento">Sabe a quantidade de alimento que deve comer?</string>
    <string name="perguntaSabePrepararAlimento">Sabe preparar o próprio alimento</string>
    <string name="perguntaHabitoIntestinal">Hábito intestinal?</string>
    <string name="mastigacao">Mastigação</string>
    <string name="patologia">Patologia</string>
    <string name="quais">Quais?</string>
    <string name="intolerancia">Intolerância?</string>
    <string name="alergia">Alergia?</string>
    <string name="perguntaPreferenciaAlimentos">Possui preferência por alguns alimentos?</string>
    <string name="perguntaNaoConsomeAlimentos">Não consome algum alimento?</string>
    <string name="observacao">Observação</string>
    <string name="finalizar">Finalizar</string>
    <string name="procurar">Procurar relatório</string>

    <string name="perguntaAtendimentoPsicologico">Tipo de atendimento</string>
    <string name="emocional">Emocional</string>
    <string name="acupuntura">Acupuntura</string>
    <string name="perguntaAspectosTrabalhados">Aspectos trabalhados</string>
    <string name="conflitosInternos">Conflitos internos</string>
    <string name="conflitosFamiliaresCuidadores">Conflitos com familiares/cuidadores</string>
    <string name="conflitosAcorde">Conflitos na Acorde</string>
    <string name="perguntaAspectosTrabalhadosAcupuntura">Aspectos trabalhados na acupuntura</string>
    <string name="agitacao">Agitação</string>
    <string name="ansiedade">Ansiedade</string>
    <string name="agressividade">Agressividade</string>
    <string name="compulsao">Compulsão</string>
    <string name="crisesEpileticas">Crises Epiléticas</string>
    <string name="equilibrio">Equilíbrio</string>
    <string name="perguntaAtividadesLudicasLeitura">Foram realizadas atividades lúdicas de leitura?</string>
    <string name="perguntaAtividadesCoordenacaoSurtiramEfeito">As atividades que envolveram coordenação motora surtiram o resultado esperado?</string>
    <string name="perguntaAvaliacoesObtiveramResultadosPositivos">As avaliações grupais e individuais obtiveram resultados positivos para averiguar as condições de cada atendido?</string>
    <string name="perguntaPlanejamentoSeguePercursoEsperado">O planejamento segue o percurso esperado?</string>
    <string name="perguntaMateriaisSaoSuficientesParaAtividades">Os materiais são suficientes para a realização das atividades?</string>
    <string name="psicoIdade">Idade</string>
    <string name="psico_tipo_do_atendimento">Tipo Do Atendimento :</string>
    <string name="psico_individual">Individual</string>
    <string name="psico_grupal">Grupal</string>
    <string name="psico_emergencial">Emergencial</string>
    <string name="psico_tipo_de_atendimento_individual">Tipo de Atendimento Individual :</string>
    <string name="psico_emocional">Emocional</string>
    <string name="psico_acupuntura">Acupuntura</string>
    <string name="psico_emocional_aspectos_trabalhados">Emocional, aspectos trabalhados :</string>
    <string name="psico_conflitos_internos">Conflitos Internos</string>
    <string name="psico_conflitos_familiares_cuidadores">Conflitos Familiares/Cuidadores</string>
    <string name="psico_conflitos_acorde">Conflitos Acorde</string>
    <string name="psico_acupuntura_aspectos_trabalhados">Acupuntura, aspectos trabalhados :</string>
    <string name="psico_agitacao">Agitação</string>
    <string name="psico_agressividade">Agressividade</string>
    <string name="psico_compulsao">Compulsão</string>
    <string name="psico_crises_epil_ticas">Crises Epiléticas</string>
    <string name="psico_atendimento_grupal_tema_trabalhado">Atendimento Grupal, tema trabalhado :</string>
    <string name="psico_emocoes">Emoções</string>
    <string name="psico_ansiedade">Ansiedade</string>
    <string name="psico_relacionamento_com_familiares_cuidadores">Relacionamento com familiares/cuidadores</string>
    <string name="psico_motivacao">Motivação</string>
    <string name="psico_atualidades">Atualidades</string>
    <string name="psico_encaminhamento_na_acorde">Encaminhamento na Acorde :</string>
    <string name="psico_fonoaudiologia">Fonoaudiologia</string>
    <string name="psico_fisioterapia">Fisioterapia</string>
    <string name="psico_terapia_ocupacional">Terapia Ocupacional</string>
    <string name="psico_educa_o_especial">Educação Especial</string>
    <string name="psico_pedagogia_psicopedagogia">Pedagogia/Psicopedagogia</string>
    <string name="psico_atividade_f_sica">Atividade Física</string>
    <string name="psico_encaminhamento_externo">Encaminhamento Externo :</string>
    <string name="psico_m_dico_psiquiatra">Médico Psiquiatra</string>
    <string name="psico_m_dico_neurologista">Médico Neurologista</string>
    <string name="psico_m_dico_endocrinologista">Médico Endocrinologista</string>
    <string name="psico_dentista">Dentista</string>
    <string name="psico_atendimento_fam_lia_cuidadores">Atendimento à Família/Cuidadores :</string>
    <string name="psico_anamneses">Anamneses</string>
    <string name="psico_fam_lias_cuidadores_dos_assistidos_da_acorde">Famílias/Cuidadores dos assistidos da Acorde</string>
    <string name="psico_visitas_domiciliares">Visitas Domiciliares :</string>
    <string name="psico_xito">Êxito</string>
    <string name="psico_n_o_havia_ningu_m_na_resid_ncia">Não havia ninguém na residência</string>
    <string name="nomeProfissional">Nome Profissional</string>
</resources>
