<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/FormTheme"
    tools:context=".FormularioNutricionista.VisualizaFormularioNutricionista.VisualizaFormularioNutricionistaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="117dp"
            android:layout_height="79dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher_round" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/presentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeAssistido"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/nome_assistido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="nome assistido"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/const_assistido_motivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motivoAtendimento"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/assistido_motivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="motivo_atendimento"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/const_assistido_encaminhamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encaminhamento"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/assistido_encaminhamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="encaminhamento"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/const_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/altura" />

            <TextView
                android:id="@+id/assistido_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/const_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peso" />

            <TextView
                android:id="@+id/assistido_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/const_bracos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bracos" />

            <TextView
                android:id="@+id/assistido_bracos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/const_quadril"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quadril" />

            <TextView
                android:id="@+id/assistido_quadril"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/const_cintura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cintura" />

            <TextView
                android:id="@+id/assistido_cintura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/presentAlimentaSoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perguntaAlimentaSozinho" />

            <TextView
                android:id="@+id/alimentaSoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/presentServeSoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perguntaServeSozinho" />

            <TextView
                android:id="@+id/ServeSoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/presentQtdAlim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perguntaSabeQtdAlimento" />

            <TextView
                android:id="@+id/qtdAlim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <!--

        OBSERVACOES


        -->


        <TextView
            android:id="@+id/const_observacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/observacao"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/assistido_observacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="observacoes" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/nome_profissional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeProfissional"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/data_atendimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data 00/00/0000"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>

