<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/FormTheme"
    android:orientation="vertical"
    tools:context=".Main.BuscaRelatorioPPFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/procuraRelatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/proximoListarRelatorio"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:textColorHint="@color/black"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/RadioGroupBuscar"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/buscaEducadoraFisica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/formularioEducadoraFisica"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/buscaNutricionista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/formularioNutricionista"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/buscaPsicologa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/formularioPsicologa"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/buscaPsicopedagoga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/formularioPsicopedagoga"
                    android:textSize="18sp"/>

            </RadioGroup>

            <Button
                android:id="@+id/buscar"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/buscar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@drawable/havelock_blue_rounded_corners"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

