<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@null"
            android:src="@mipmap/ac_launcher" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:imeOptions="actionNext"
                android:drawableRight="@mipmap/user"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:drawableRight="@mipmap/key"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/havelock_blue_rounded_corners"
            android:fontFamily="sans-serif-bold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</ScrollView>